camunda8 - v2/zeebe-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zeebe-gateway
  labels:
    app: zeebe-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zeebe-gateway
  template:
    metadata:
      labels:
        app: zeebe-gateway
    spec:
      containers:
        - name: zeebe-gateway
          image: docker.io/camunda/zeebe:8.7.13
          ports:
            - name: gateway
              containerPort: 26500
            - name: command
              containerPort: 26501
            - name: internal
              containerPort: 26502
