camunda8 - v2/zeebe-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zeebe-gateway
  labels:
    app: zeebe-gateway
spec:
  ports:
    - name: gateway
      port: 26500
      targetPort: gateway
    - name: command
      port: 26501
      targetPort: command
    - name: internal
      port: 26502
      targetPort: internal
  selector:
    app: zeebe-gateway
