camunda8 - v2/zeebe-gateway/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zeebe-gateway-network-policy
spec:
  podSelector:
    matchLabels:
      app: zeebe-gateway
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: operate
        - podSelector:
            matchLabels:
              app: tasklist
        - podSelector:
            matchLabels:
              app: optimize
        - podSelector:
            matchLabels:
              app: identity
        - podSelector:
            matchLabels:
              app: connectors
        - podSelector:
            matchLabels:
              app: console
      ports:
        - protocol: TCP
          port: 26500
        - protocol: TCP
          port: 26501
